--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -3,6 +3,43 @@
     <head>
         <meta charset="utf-8">
         <title>River</title>
+        <style>
+            body, html {
+                width: 100%;
+                height: 100%;
+            }
+
+            body, html, div, input {
+                display: flex;
+                box-sizing: border-box;
+                margin: 0;
+                padding: 0;
+                font-family: 'Open Sans';
+            }
+
+            input, textarea {
+                outline: none;
+                border: none;
+                padding: none;
+                resize: none;
+                background: none;
+            }
+
+            a {
+                text-decoration: none;
+                color: inherit;
+                font-family: 'Open Sans';
+            }
+
+            abbr {
+                display: inline;
+            }
+
+            #container {
+                width: 100%;
+                height: 100%;
+            }
+        </style>
     </head>
     <body>
         <div id="container">
