--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -44,5 +44,6 @@
     <body>
         <div id="container">
         </div>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600&display=swap" rel="stylesheet">
     </body>
 </html>
