--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -42,6 +42,7 @@
         </style>
     </head>
     <body>
+        <div id="portal-container"></div>
         <div id="container">
         </div>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600&display=swap" rel="stylesheet">
