Change title to include version number

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>River</title>
+        <title>River - 0.0.2</title>
         <style>
             body, html {
                 width: 100%;
