--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -14,7 +14,7 @@
                 box-sizing: border-box;
                 margin: 0;
                 padding: 0;
-                font-family: 'Open Sans';
+                font-family: 'Noto Sans HK';
             }
 
             input, textarea {
@@ -28,7 +28,7 @@
             a {
                 text-decoration: none;
                 color: inherit;
-                font-family: 'Open Sans';
+                font-family: 'Noto Sans HK';
             }
 
             abbr {
@@ -45,6 +45,6 @@
         <div id="portal-container"></div>
         <div id="container">
         </div>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Noto+Sans+HK&display=swap" rel="stylesheet">
     </body>
 </html>
