Working draft of variable nodes, referencing ndoes inside log nodes, and error states.

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -39,6 +39,51 @@
                 width: 100%;
                 height: 100%;
             }
+
+            @keyframes "blink" {
+                from, to {
+                    background: #2e4d63;
+                }
+                50% {
+                    background: transparent;
+                }
+            }
+
+            @-moz-keyframes blink {
+                from, to {
+                    background: #2e4d63;
+                }
+                50% {
+                    background: transparent;
+                }
+            }
+
+            @-webkit-keyframes "blink" {
+                from, to {
+                    background: #2e4d63;
+                }
+                50% {
+                    background: transparent;
+                }
+            }
+
+            @-ms-keyframes "blink" {
+                from, to {
+                    background: #2e4d63;
+                }
+                50% {
+                    background: transparent;
+                }
+            }
+
+            @-o-keyframes "blink" {
+                from, to {
+                    background: #2e4d63;
+                }
+                50% {
+                    background: transparent;
+                }
+            }
         </style>
     </head>
     <body>
